chore: renamed folder, and fixed .ignore to ignore all .log.* files

--- a/spring-dubbo-consumer/src/main/resources/templates/homepage.html
+++ b/spring-dubbo-consumer/src/main/resources/templates/homepage.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<!--/*@thymesVar id="user" type="org.apache.spring.dubbo.port.dto.UserDTO"*/-->
+<!--/*@thymesVar id="user" type="org.apache.spring.dubbo.facade.dto.UserDTO"*/-->
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
