fix: debugged login not working after registeration success

--- a/spring-dubbo-consumer/src/main/resources/templates/registration.html
+++ b/spring-dubbo-consumer/src/main/resources/templates/registration.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--/*@thymesVar id="user" type="org.apache.spring.dubbo.consumer.application.common.vo.UserVO"*/-->
+<!--/*@thymesVar id="user" type="org.apache.spring.dubbo.consumer.user.application.common.vo.UserVO"*/-->
 <!--/*@thymesVar id="error" type="java.lang.String"*/-->
 <head>
     <meta charset="UTF-8">
